--- a/src/scss/element/form/_select_module.scss
+++ b/src/scss/element/form/_select_module.scss
@@ -56,7 +56,7 @@
 
 .select_options li {
     padding: 0 0.15rem;
-    font-size: 14px;
+    font-size: 0.14rem;
     color: var(--b);
     height: 0.45rem;
     display: flex;
