--- a/src/scss/element/_pn_page.scss
+++ b/src/scss/element/_pn_page.scss
@@ -7,6 +7,10 @@
     align-items: flex-start;
     border-top: 0.01rem solid #dfdfdf;
 
+    @media screen and (max-width: 768px) {
+        margin-top: 0.4rem;
+    }
+
     .p_n {
         display: flex;
         flex-direction: column;
