--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -11,6 +11,10 @@
     gap: 0.2rem;
     grid-template-columns: 3fr 5fr;
 
+    @media screen and (max-width:1024px) {
+        grid-template-columns: 1fr;
+    }
+
     h3 {
         line-height: 1.2;
     }
@@ -29,6 +33,15 @@
     color: var(--f);
     overflow: hidden;
 
+    @media screen and (max-width:1024px) {
+        --asb: auto;
+    }
+
+    @media screen and (max-width:768px) {
+        height: auto;
+        --asb: auto;
+    }
+
     .ab1_Banner {
         grid-area: 1 / 1;
         position: relative;
@@ -41,6 +54,10 @@
     .ab_top {
         height: 100%;
         display: grid;
+
+        @media screen and (max-width:768px) {
+            height: 3rem;
+        }
     }
 
     .ab_top .ab_topImg {
@@ -62,11 +79,20 @@
         -webkit-backdrop-filter: blur(5px);
         background-color: rgb(255 255 255 / 10%);
         transition: all var(--ease) 0.3s 0s;
+
+        @media screen and (max-width:768px) {
+            position: static;
+            background: var(--bc);
+        }
     }
 
     .ab_bottom ul {
         display: flex;
         height: 100%;
+
+        @media screen and (max-width:1024px) {
+            flex-wrap: wrap;
+        }
     }
 
     .ab_bottom ul li {
@@ -82,6 +108,10 @@
         gap: 0.3rem;
         align-items: baseline;
 
+        @media screen and (max-width:1024px) {
+            flex: 1 0 33.333%;
+        }
+
         h5 {
             font-weight: normal;
             font-family: 'Poppins';
@@ -92,6 +122,10 @@
             font-size: 0.68rem;
             line-height: 1.1;
             font-family: "Oswald";
+
+            @media screen and (max-width:768px) {
+                font-size: 0.42rem;
+            }
 
             span {
                 font-size: 0.3rem;
@@ -119,6 +153,21 @@
     display: flex;
     flex-direction: column;
 
+    @media screen and (max-width:1024px) {
+        --w: calc(100% - 5.8rem);
+    }
+
+    @media screen and (max-width:768px) {
+        --w: 80%;
+    }
+
+    .container {
+        @media screen and (max-width:768px) {
+            gap: 0.2rem;
+            flex-direction: column;
+        }
+    }
+
     .a4_left {
         padding: 0.1rem;
         background-image: linear-gradient(90deg, rgb(48, 152, 210) 0%, rgb(4, 73, 149) 100%);
@@ -127,6 +176,11 @@
         width: var(--w);
         height: var(--w);
         max-width: 5.6rem;
+
+        @media screen and (max-width:768px) {
+            order: -2;
+            margin: 0 auto 0.3rem;
+        }
 
         .bi {
             object-fit: cover;
@@ -145,6 +199,11 @@
             align-items: center;
             justify-content: center;
 
+            @media screen and (max-width:768px) {
+                width: 1.2rem;
+                height: 1.2rem;
+            }
+
             img {
                 width: 0.6rem;
             }
@@ -154,6 +213,11 @@
     .a4_right {
         width: 60%;
         max-width: 6.6rem;
+
+        @media screen and (max-width:768px) {
+            width: 100%;
+            max-width: 100%;
+        }
 
         .t {
             line-height: 1.2;
@@ -186,6 +250,10 @@
 
         .t {
             line-height: 1.3;
+
+            @media screen and (max-width:768px) {
+                font-size: 0.32rem;
+            }
         }
     }
 
@@ -195,6 +263,10 @@
         overflow: visible;
         padding-top: 0.8rem;
         cursor: grab;
+
+        @media screen and (max-width:768px) {
+            padding-top: 0.4rem;
+        }
 
         &::after {
             content: '';
@@ -211,6 +283,12 @@
         flex-direction: column;
         filter: blur(0.05rem);
         transition: all var(--ease) 0.3s;
+
+        @media screen and (max-width:768px) {
+            padding-left: 0.3rem;
+            padding-right: 0.3rem;
+            margin-top: 0rem;
+        }
 
         &.is-visible {
             filter: blur(0rem);
@@ -249,6 +327,11 @@
 
         div {
             margin-top: 0.45rem;
+
+            @media screen and (max-width:768px) {
+                order: -2;
+                margin: 0 0 0.2rem 0;
+            }
         }
 
         &::after {
@@ -269,6 +352,11 @@
                 margin-top: 0rem;
                 margin-bottom: 0.45rem;
                 order: -2;
+
+                @media screen and (max-width:768px) {
+                    margin-top: 0rem;
+                    margin-bottom: 0.2rem;
+                }
             }
         }
     }
@@ -281,6 +369,10 @@
         z-index: 999999;
         opacity: 0;
         transition: opacity var(--ease) 0.3s;
+
+        @media screen and (max-width:768px) {
+            display: none;
+        }
 
         div {
             transform: scale(0);
@@ -364,6 +456,10 @@
             z-index: 1;
             transition: all var(--ease) 0.3s;
 
+            @media screen and (max-width:768px) {
+                padding: 0.3rem;
+            }
+
             p {
                 color: var(--f);
                 max-width: 8rem;
@@ -388,6 +484,11 @@
 .a4-5 {
     padding-top: 0.4rem;
     padding-bottom: 1.2rem;
+
+    @media screen and (max-width:768px) {
+        padding-bottom: 0rem;
+        padding-top: 0;
+    }
 
     .a4-5_list {
         display: flex;
