--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -111,6 +111,12 @@
 
     .container {
         align-items: center;
+
+        @media screen and (max-width: 768px) {
+            .s3_right {
+                padding: 0.3rem 0 0.3rem 0;
+            }
+        }
     }
 
     .s3_left {
