--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -1,6 +1,10 @@
 .c_contactBox {
     display: grid;
     grid-template-columns: 8fr 7fr;
+
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .c_contact {
@@ -25,11 +29,22 @@
         .c_contact_way_xin {
             grid-template-columns: 0.3rem 1fr;
             gap: 0.15rem;
+
+            @media screen and (max-width: 768px) {
+                font-size: 0.15rem;
+                grid-template-columns: 0.22rem 1fr;
+                margin-bottom: 0.1rem;
+            }
         }
 
         img {
             width: 0.3rem;
             height: 0.3rem;
+
+            @media screen and (max-width: 768px) {
+                width: 0.22rem;
+                height: 0.22rem;
+            }
         }
     }
 
@@ -43,6 +58,16 @@
         position: relative;
         overflow: hidden;
         height: 75vh;
+
+        .c_contact_quote_info,
+        .c_contact_quote_more {
+            position: relative;
+            z-index: 2;
+        }
+
+        @media screen and (max-width: 768px) {
+            padding: 0.6rem 0.3rem 0.6rem;
+        }
     }
 
     .c_contact_quote_info .ppins-bold {
@@ -60,6 +85,15 @@
 
     .c_contact_info {
         max-width: 7rem;
+
+        @media screen and (max-width: 768px) {
+            margin-top: 0.4rem;
+
+            .f-56 {
+                margin-bottom: 0.2rem;
+            }
+        }
+
     }
 
     .c_contact_quote_img {
