--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,6 +8,10 @@ header {
     height: 0.36rem;
     background-color: var(--f6);
 
+    @media screen and (max-width:1024px) {
+        padding: 0 0.3rem;
+    }
+
     .grzxrukou {
         a {
             color: var(--6);
@@ -29,15 +33,68 @@ header {
     height: 0.8rem;
     border-bottom: 0.01rem solid var(--d);
 
+    @media screen and (max-width:1024px) {
+        padding: 0 0.3rem;
+
+        .logo img {
+            width: 1.05rem;
+        }
+
+        .mob_ico svg {
+            width: 0.26rem;
+            height: 0.26rem;
+        }
+    }
+
+    @media screen and (max-width:768px) {
+        padding: 0 0.15rem;
+    }
+
+    .nav {
+        @media screen and (max-width:768px) {
+            position: absolute;
+            top: 100%;
+            width: 100%;
+            background: var(--f6);
+            left: 0;
+            height: 0;
+            overflow: hidden;
+            transition: all var(--ease) 0.4s;
+
+            ul {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            &.header_active {
+                height: calc(100vh - 0.9rem);
+            }
+        }
+    }
+
     .navBox {
         .nav_item {
             .nav_text {
                 color: var(--1);
 
+                @media screen and (max-width:768px) {
+                    width: calc(100% - 0.6rem);
+                    height: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    padding: 0 0.2rem;
+                }
+
                 a {
                     padding: 0 0.2rem;
                     font-family: "Poppins-Medium";
                     transition: all var(--ease) 0.3s;
+
+                    @media screen and (max-width:768px) {
+                        padding: 0 0.1rem;
+                        font-size: 0.15rem;
+                    }
 
                     &:hover {
                         color: var(--bc);
@@ -53,6 +110,27 @@ header {
         justify-content: center;
         align-items: center;
         position: relative;
+
+        @media screen and (max-width:768px) {
+            width: 100%;
+            height: 0.6rem;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            position: relative;
+
+            .nav_children_arrow {
+                margin-right: 0.2rem;
+                height: 100%;
+                width: 0.3rem;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                img {
+                    width: 0.1rem;
+                }
+            }
+        }
 
         &::after {
             content: "";
@@ -75,18 +153,23 @@ header {
             opacity: 0;
             visibility: hidden;
             pointer-events: none;
-        }
 
-        &.have_children:hover {
-
-            .nav_children,
-            &::after {
-                opacity: 1;
-                visibility: visible;
-                pointer-events: inherit;
+            @media screen and (max-width:768px) {
+                display: none;
             }
         }
 
+        @media screen and (min-width: 768px) {
+            &.have_children:hover {
+
+                .nav_children,
+                &::after {
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: inherit;
+                }
+            }
+        }
     }
 
     .nav_item:not(.teshu) .nav_children {
@@ -138,9 +221,32 @@ header {
             pointer-events: none;
             transition: all var(--ease) 0.3s;
 
+            @media screen and (max-width:768px) {
+                width: 100%;
+                top: 0;
+                left: 0;
+                background: rgb(0 0 0 / 37%);
+                bottom: 0;
+
+                &.arrow_active {
+                    opacity: 1;
+                    visibility: visible;
+                    pointer-events: auto;
+                }
+            }
+
             .container {
                 display: grid;
                 grid-template-columns: 2fr 5fr;
+
+                @media screen and (max-width:768px) {
+                    width: 70%;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    margin: 0 0 0 auto;
+                    background: #fff;
+                }
 
                 .nav_children_left {
                     padding-top: 0.6rem;
@@ -149,6 +255,12 @@ header {
                     justify-content: space-between;
                     flex-direction: column;
                     padding-bottom: 0.55rem;
+
+                    @media screen and (max-width:768px) {
+                        border-right: 0;
+                        padding-top: 0.3rem;
+                        padding-bottom: 0.3rem;
+                    }
 
                     .nav_children_tab {
                         p {
@@ -203,13 +315,33 @@ header {
                     padding-bottom: 0.55rem;
                     padding-left: 1.2rem;
 
+                    @media screen and (max-width:768px) {
+                        padding-left: 0;
+                        padding-bottom: 0.3rem;
+                        padding-top: 0.3rem;
+                    }
+
                     ul {
                         display: flex;
                         flex-wrap: wrap;
                         gap: 0.4rem;
 
+                        @media screen and (max-width:768px) {
+                            gap: 0.16rem;
+                        }
+
                         li {
                             width: 1.52rem;
+
+                            @media screen and (max-width:768px) {
+                                width: 100%;
+
+                                a {
+                                    display: flex;
+                                    gap: 0.1rem;
+                                    align-items: center;
+                                }
+                            }
 
                             .nav_img {
                                 width: 1.52rem;
@@ -217,6 +349,11 @@ header {
                                 border-radius: 0.08rem;
                                 position: relative;
                                 overflow: hidden;
+
+                                @media screen and (max-width:768px) {
+                                    width: 0.4rem;
+                                    height: 0.4rem;
+                                }
 
                                 img {
                                     transition: all var(--ease) 0.3s;
@@ -228,6 +365,13 @@ header {
                                 line-height: 1.4;
                                 height: 0.44rem;
                                 transition: all var(--ease) 0.3s;
+
+
+                                @media screen and (max-width:768px) {
+                                    font-size: 0.14rem;
+                                    height: auto;
+                                    margin: 0;
+                                }
                             }
 
                             &:hover {
@@ -251,7 +395,8 @@ header {
     .mob_ico {
         display: none;
     }
-    .nav_children_arrow{
+
+    .nav_children_arrow {
         display: none;
     }
 }
