--- a/src/scss/layout/_mp.scss
+++ b/src/scss/layout/_mp.scss
@@ -39,6 +39,11 @@
         justify-content: space-between;
         gap: 1rem;
 
+        @media screen and (max-width: 768px) {
+            gap: 0.1rem;
+            flex-direction: column;
+        }
+
         ul {
             min-width: 2rem;
 
