--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -2,7 +2,7 @@
 
 .se1 {
     .se1_box {
-        height: 74vh;
+        height: auto;
         background-image: url(../images/img-78.png);
         background-size: cover;
         border-radius: 0.16rem;
@@ -15,6 +15,17 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+
+        @media screen and (max-width:768px) {
+            padding-top: 0.6rem;
+            padding-left: 0.3rem;
+            padding-bottom: 0.4rem;
+            padding-right: 0.3rem;
+
+            .c_h2 {
+                padding-bottom: 0.3rem;
+            }
+        }
 
         .c_h2 {
             h2 {
@@ -44,6 +55,12 @@
     }
 
     .se_right {
+        padding-top: 2rem;
+
+        @media screen and (max-width:768px) {
+            padding-top: 0.6rem;
+        }
+
         img {
             object-position: bottom;
         }
@@ -51,6 +68,7 @@
 }
 
 .se2 {
+
     .se2_left {
         img {
             border-radius: 0.16rem;
@@ -58,6 +76,10 @@
     }
 
     .se2_right {
+        @media screen and (max-width:768px) {
+            padding: 0.3rem 0;
+        }
+
         .t {
             line-height: 1.2;
             margin-bottom: 0.2rem;
@@ -204,11 +226,19 @@
         flex-direction: column;
         gap: 1.2rem;
         display: grid;
+
+        @media screen and (max-width:768px) {
+            gap: 0.4rem;
+        }
     }
 
     .se4_img {
         position: relative;
         z-index: 1;
+
+        img {
+            object-fit: cover;
+        }
 
         &::after {
             content: '';
@@ -227,6 +257,18 @@
         z-index: 2;
         color: var(--f);
         max-width: 7.5rem;
+
+        @media screen and (max-width:768px) {
+            padding: 0.3rem;
+
+            .t {
+                font-size: 0.3rem;
+            }
+
+            .s {
+                font-size: 0.14rem;
+            }
+        }
     }
 
     .se4_item {
