--- a/src/scss/layout/_news.scss
+++ b/src/scss/layout/_news.scss
@@ -187,6 +187,10 @@
 
         p {
             color: var(--9);
+
+            img{
+                width: 0.16rem;
+            }
         }
 
         .nd_type a {
