--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2796,7 +2796,7 @@ body {
   background-color: var(--bc);
   transition: all var(--ease) 0.3s;
 }
-.c_sort li a:hover::after {
+.c_sort li a.cur::after, .c_sort li a:hover::after {
   left: 0;
   width: 100%;
 }
@@ -2925,6 +2925,7 @@ body {
   height: 0.08rem;
   background-color: var(--ac);
   border-radius: 100%;
+  transition: all var(--ease) 0.3s;
 }
 
 .btn-bc {
@@ -2945,6 +2946,9 @@ body {
 .btn-f:hover {
   background-color: var(--bc);
   border-color: var(--bc);
+}
+.btn-f:hover::before {
+  background-color: var(--ac);
 }
 
 .search {
@@ -3842,7 +3846,12 @@ header {
   }
 }
 @media screen and (min-width: 768px) {
-  .header_bottom .nav_item.have_children:hover .nav_children, .header_bottom .nav_item.have_children:hover::after {
+  .header_bottom .nav_item.have_children:hover .nav_children {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: inherit;
+  }
+  .header_bottom .nav_item.teshu:hover::after {
     opacity: 1;
     visibility: visible;
     pointer-events: inherit;
@@ -3867,6 +3876,7 @@ header {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  border-top: 0.01rem solid var(--d);
 }
 .header_bottom .nav_item:not(.teshu) .nav_children a {
   background: var(--f);
@@ -3950,10 +3960,10 @@ header {
 .header_bottom .teshu .nav_children .container .nav_children_left .nav_children_tab p::after {
   content: "";
   position: absolute;
-  right: -0.01rem;
+  right: -0.02rem;
   top: 0;
   bottom: 0;
-  width: 0.01rem;
+  width: 0.03rem;
   height: 100%;
   background-color: var(--bc);
   opacity: 0;
@@ -3967,6 +3977,9 @@ header {
   align-items: baseline;
   color: var(--6);
   gap: 0.1rem;
+}
+.header_bottom .teshu .nav_children .container .nav_children_left .nav_children_more a:hover {
+  color: var(--bc);
 }
 .header_bottom .teshu .nav_children .container .nav_children_left .nav_children_more img {
   width: auto;
@@ -3987,6 +4000,8 @@ header {
   display: flex;
   flex-wrap: wrap;
   gap: 0.4rem;
+  height: 4.8rem;
+  overflow-y: auto;
 }
 @media screen and (max-width: 768px) {
   .header_bottom .teshu .nav_children .container .nav_children_right ul {
@@ -4328,6 +4343,7 @@ header {
   height: 4.8rem;
   padding: 0.1rem;
   background: #fff;
+  border: 0rem solid var(--d);
 }
 .case_d_2 .c_item .c_info {
   height: 3rem;
@@ -4514,6 +4530,9 @@ header {
 .l_news_detail .nd_timeBox p {
   color: var(--9);
 }
+.l_news_detail .nd_timeBox p img {
+  width: 0.16rem;
+}
 .l_news_detail .nd_timeBox .nd_type a {
   transition: all var(--ease) 0.3s;
 }
@@ -4587,7 +4606,7 @@ header {
   }
 }
 .c_contact .c_contact_quote {
-  padding: 1rem 0.6rem 0.8rem;
+  padding: 0.8rem 0.6rem 0.8rem;
   border-radius: 0.16rem;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
@@ -4786,6 +4805,7 @@ header {
 .p_gallery_2 .c_h1 a {
   color: var(--0);
   transition: all var(--ease) 0.3s;
+  gap: 0.08rem;
 }
 @media screen and (max-width: 480px) {
   .p_gallery_2 .c_h1 a {
@@ -4831,6 +4851,7 @@ header {
 .Why_us .c_h1 a {
   color: var(--0);
   transition: all var(--ease) 0.3s;
+  gap: 0.08rem;
 }
 @media screen and (max-width: 480px) {
   .Why_us .c_h1 a {
@@ -4933,7 +4954,7 @@ header {
   padding-top: 0.85rem;
 }
 .Why_us .why_us_item:hover::before {
-  opacity: 1;
+  opacity: 0.95;
 }
 
 .l_technology_1 {
@@ -4996,10 +5017,11 @@ header {
   pointer-events: none;
 }
 .l_technology_1 .l_technology_1_info {
-  width: 64%;
+  width: 100%;
   padding: 0.2rem 0;
   position: relative;
   z-index: 2;
+  max-width: 7.9rem;
 }
 .l_technology_1 .l_technology_1_info h3 {
   color: var(--f);
@@ -5173,6 +5195,18 @@ header {
      object-fit: cover;
 }
 
+.a2 {
+  height: 2.6rem;
+}
+@media screen and (max-width: 1024px) {
+  .a2 {
+    height: auto;
+  }
+}
+.a2 img {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 .a2 .container {
   z-index: 2;
 }
@@ -5242,8 +5276,8 @@ header {
   left: 0;
   right: 0;
   z-index: 2;
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   background-color: rgba(255, 255, 255, 0.1);
   transition: all var(--ease) 0.3s 0s;
 }
@@ -5554,6 +5588,12 @@ header {
   height: 3.2rem;
   background-color: var(--f6);
 }
+.a6 .honor_imt img {
+  transition: all var(--ease) 0.3s;
+}
+.a6 .honor_imt:hover img {
+  transform: scale(1.04);
+}
 
 .a7 .kcx {
   height: 5.45rem;
@@ -5610,12 +5650,6 @@ header {
 }
 .a7 .kcx .kcx_title p:first-child {
   line-height: 1.2;
-}
-.a7 .kcx:hover .kcx_title {
-  padding-top: 0.85rem;
-}
-.a7 .kcx:hover::after {
-  opacity: 0;
 }
 
 .a4-5 {
@@ -5872,7 +5906,7 @@ header {
   background-color: var(--bl);
 }
 .s5 .s5_list {
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(3.4rem, 1fr));
   position: relative;
 }
 .s5 .s5_list .s5_item {
@@ -6070,13 +6104,13 @@ header {
   transform: translateX(-50%) translateY(0.2rem);
 }
 .s7 .s7_line img {
-  width: 0.16rem;
+  width: 0.07rem;
   position: absolute;
   right: 0;
-  height: 0.16rem;
+  height: 0.07rem;
   max-height: -moz-fit-content;
   max-height: fit-content;
-  transform: translateY(-0.08rem);
+  transform: translateY(-0.03rem);
 }
 
 .se1 .se1_box {
@@ -6123,7 +6157,7 @@ header {
   mask-image: linear-gradient(var(--mask-direction, to right), hsla(0, 0%, 0%, 0), hsl(0, 0%, 0%) 0%, hsl(0, 0%, 0%) 50%, hsla(0, 0%, 0%, 0));
 }
 .se1 .se_right {
-  padding-top: 2rem;
+  padding-top: 1.5215rem;
 }
 @media screen and (max-width: 768px) {
   .se1 .se_right {
@@ -6210,7 +6244,6 @@ header {
   transition: all var(--ease) 0.3s;
 }
 .se3 .se3_item .se3_i {
-  transform: translateY(1.6rem);
   transition: all var(--ease) 0.3s;
 }
 .se3 .se3_item .se3_i .t {
@@ -6258,7 +6291,7 @@ header {
   opacity: 0;
 }
 .se3 .se3_item:hover .se3_i {
-  transform: translateY(0rem);
+  transform: translateY(1.6rem);
 }
 
 .se4 .se4_list {
@@ -6344,18 +6377,21 @@ header {
   }
 }
 .f1 .nd_timeBox {
-  margin-top: 0.6rem;
+  margin-top: 0.4rem;
   border-bottom: 0.01rem solid var(--d);
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.2rem;
 }
 @media screen and (max-width: 768px) {
   .f1 .nd_timeBox {
-    margin-top: 0.3rem;
-    padding-bottom: 0.3rem;
+    margin-top: 0.2rem;
+    padding-bottom: 0.1rem;
   }
 }
 .f1 .nd_timeBox p {
   color: var(--9);
+}
+.f1 .nd_timeBox p img {
+  width: 0.16rem;
 }
 .f1 .nd_timeBox .nd_type a {
   transition: all var(--ease) 0.3s;
@@ -6954,7 +6990,7 @@ header {
   border-bottom: 0.01rem solid #b1c6e2;
   margin-bottom: 0.25rem;
   padding-bottom: 0.25rem;
-  padding-top: 0.7rem;
+  padding-top: 0.6rem;
 }
 .login_Box .login_contact .c_contact_way {
   padding-top: 0.1rem;
@@ -7407,6 +7443,85 @@ header {
   }
 }
 
+.set_up_fanc {
+  position: fixed;
+  top: 0rem;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0.4rem 0.15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 12;
+  background: rgba(247, 247, 247, 0.9);
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: all var(--ease) 0.3s;
+}
+.set_up_fanc .set_up_fanc_box {
+  background-color: var(--f);
+  padding: 0.4rem;
+  border-radius: 0.08rem;
+  max-width: 5.2rem;
+  width: 100%;
+  position: relative;
+}
+.set_up_fanc .set_up_fanc_box_top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.set_up_fanc .set_up_fanc_box_top_i {
+  display: flex;
+  justify-content: center;
+}
+.set_up_fanc .set_up_fanc_box_top_i img {
+  width: 1.29rem;
+  height: 1.29rem;
+}
+.set_up_fanc .set_up_fanc_box_top_l {
+  max-width: 2.9rem;
+  width: 100%;
+}
+.set_up_fanc .set_up_fanc_box_top_btn {
+  display: flex;
+  gap: 0.2rem;
+  width: 100%;
+}
+.set_up_fanc .set_up_fanc_box_top_btn a {
+  border: 0.01rem solid var(--bc);
+  font-size: 0.18rem;
+  color: var(--bc);
+  flex: 1;
+  padding: 0 0.15rem;
+  transition: all var(--ease) 0.3s;
+}
+.set_up_fanc .set_up_fanc_box_top_btn a:last-child {
+  background: var(--bc);
+  color: var(--f);
+}
+.set_up_fanc .set_up_fanc_box_top_btn a:last-child:hover {
+  background: var(--bc_c);
+}
+.set_up_fanc .set_up_fanc_box_top_btn a::before {
+  display: none;
+}
+.set_up_fanc .set_up_fanc_box_top_btn a:hover {
+  background: var(--bc);
+  color: var(--f);
+}
+.set_up_fanc .set_up_fanc_box_close {
+  position: absolute;
+  right: 0.3rem;
+  top: 0.2rem;
+  z-index: 10;
+  cursor: pointer;
+}
+
 .mp .container {
   max-width: 10rem;
 }
@@ -7603,6 +7718,342 @@ footer .footer_menu .search .formBtn img {
   height: 0.16rem;
 }
 
+.s_title .t {
+  line-height: 1.2;
+}
+.s_title .s {
+  color: var(--6);
+  line-height: 1.2;
+}
+
+.search_sort:not(.search_nodata) .s_sort_search {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 0.4rem;
+  border-bottom: 0.01rem solid var(--d);
+}
+@media screen and (max-width: 768px) {
+  .search_sort:not(.search_nodata) .s_sort_search {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.2rem;
+  }
+}
+.search_sort:not(.search_nodata) .search {
+  max-width: 3.8rem;
+  background: none;
+  border: 0;
+  border-radius: inherit;
+  grid-template-columns: 1fr 0.4rem;
+}
+@media screen and (max-width: 768px) {
+  .search_sort:not(.search_nodata) .search {
+    border: 1px solid #efefef;
+    background: #efefef;
+    margin-bottom: 0.1rem;
+    max-width: 100%;
+    order: -2;
+  }
+}
+.search_sort:not(.search_nodata) .search .form_input {
+  margin: 0;
+}
+.search_sort:not(.search_nodata) .search .p_input {
+  background: none;
+}
+.search_sort:not(.search_nodata) .search .input-group {
+  grid-template-columns: 1fr;
+}
+.search_sort:not(.search_nodata) .search .input-group input::-moz-placeholder {
+  color: var(--9);
+}
+.search_sort:not(.search_nodata) .search .input-group input::placeholder {
+  color: var(--9);
+}
+.search_sort:not(.search_nodata) .search .formBtn {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  background: none;
+  opacity: 1;
+}
+.search_sort:not(.search_nodata) .search img {
+  width: 0.16rem;
+}
+
+.se_title {
+  padding: 0.4rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+@media screen and (max-width: 768px) {
+  .se_title > p {
+    font-size: 0.22rem;
+  }
+}
+
+.se_technology_list {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(2.3rem, 1fr));
+  grid-gap: 0.3rem;
+}
+
+.se_case .c_list_1 {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(3.5rem, 1fr));
+}
+.se_case .c_item {
+  border-top: 0;
+  border: 0.01rem solid var(--d);
+  height: 4.3rem;
+}
+.se_case .c_item .c_img {
+  height: 3rem;
+  width: calc(100% + 0.02rem);
+  transform: translate(-0.01rem, -0.01rem);
+}
+.se_case .c_item .c_img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all var(--ease) 0.3s;
+}
+.se_case .c_item .c_info {
+  transition: all var(--ease) 0.3s;
+  z-index: 2;
+  height: 2rem;
+}
+.se_case .c_item .c_info .i {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 100%;
+  display: grid;
+  place-content: center;
+  background: var(--f);
+  transition: opacity var(--ease) 0.3s;
+}
+.se_case .c_item .c_info .i img {
+  width: 0.15rem;
+}
+.se_case .c_item .c_info .t {
+  color: var(--0);
+  line-height: 1.2;
+  transition: color var(--ease) 0.3s;
+}
+.se_case .c_item .c_info .s {
+  word-break: break-word;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  overflow: hidden;
+  margin-top: 0.04rem;
+  transition: color var(--ease) 0.3s;
+}
+.se_case .c_item:hover .c_info {
+  transform: translateY(-0.7rem);
+  background-color: var(--bc);
+}
+.se_case .c_item:hover .c_info > * {
+  color: var(--f);
+}
+.se_case .c_item:hover .c_info .i {
+  opacity: 1;
+}
+.se_case .c_item:hover .c_img img {
+  transform: scale(1.1);
+}
+
+.se_news .c_list_1 {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(3.7rem, 1fr));
+  border-top: 0.01rem solid #ddd;
+}
+.se_news .c_list_1 .c_item {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-bottom: 0.01rem solid #ddd;
+  border-right: 0.01rem solid #ddd;
+  position: relative;
+}
+.se_news .c_list_1 .c_item::after {
+  content: "";
+  background-color: var(--bc);
+  width: 100%;
+  height: 0.04rem;
+  position: absolute;
+  left: 0;
+  bottom: -0.01rem;
+  right: 0;
+  opacity: 0;
+  transition: all var(--ease) 0.3s;
+}
+.se_news .c_list_1 .c_item .c_info {
+  margin-bottom: 0.5rem;
+}
+.se_news .c_list_1 .c_item time {
+  color: var(--bc);
+}
+.se_news .c_list_1 .c_item time img {
+  width: 0.18rem;
+  height: 0.18rem;
+}
+.se_news .c_list_1 .c_item .t {
+  line-height: 1.4;
+  margin-top: 0.1rem;
+}
+.se_news .c_list_1 .c_item .t a {
+  transition: all var(--ease) 0.3s;
+}
+.se_news .c_list_1 .c_item .tag {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.1rem;
+  margin-top: 0.3rem;
+}
+.se_news .c_list_1 .c_item .tag a {
+  border-radius: 0.3rem;
+  border: 0.01rem solid var(--9);
+  padding: 0 0.15rem;
+  color: var(--9);
+  height: 0.3rem;
+  display: flex;
+  align-items: center;
+  width: -moz-max-content;
+  width: max-content;
+  transition: all var(--ease) 0.3s;
+}
+.se_news .c_list_1 .c_item .tag a:hover {
+  color: var(--bc);
+  border-color: var(--bc);
+}
+.se_news .c_list_1 .c_item .c_img img {
+  aspect-ratio: 15/9;
+  -o-object-fit: cover;
+     object-fit: cover;
+  transition: all var(--ease) 0.3s;
+}
+.se_news .c_list_1 .c_item:hover .t a {
+  color: var(--bc);
+}
+.se_news .c_list_1 .c_item:hover .c_img img {
+  transform: scale(1.1);
+}
+.se_news .c_list_1 .c_item:hover::after {
+  opacity: 1;
+}
+
+.search_nodata .s_sort_search {
+  max-width: 7.4rem;
+  width: 100%;
+  margin: 0 auto;
+}
+.search_nodata .search {
+  background-color: var(--f);
+  grid-template-columns: 1fr 0.54rem;
+}
+.search_nodata .search .input-group .p_input {
+  background-color: var(--f);
+  height: 0.54rem;
+}
+.search_nodata .search .form_input {
+  margin-bottom: 0rem;
+}
+.search_nodata .search .form_input input::-moz-placeholder {
+  color: var(--9);
+}
+.search_nodata .search .form_input input::placeholder {
+  color: var(--9);
+}
+.search_nodata .search .p_group .input-group {
+  grid-template-columns: 1fr;
+}
+.search_nodata .search .formBtn {
+  background-color: var(--bc);
+  width: 0.54rem;
+  height: 0.54rem;
+}
+.search_nodata .search .formBtn img {
+  width: 0.16rem;
+}
+
+.nodata {
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+}
+.nodata .nodata_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.nodata img {
+  width: 0.58rem;
+  margin-bottom: 0.2rem;
+}
+
+.homeBanner {
+  height: calc(100vh - 0.8rem - 0.36rem);
+}
+.homeBanner .homeBanner_left {
+  height: 100%;
+  position: relative;
+  z-index: 2;
+  padding: 0.6rem;
+  padding-bottom: 0.2rem;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+@media screen and (max-width: 768px) {
+  .homeBanner .homeBanner_left {
+    display: none;
+  }
+}
+.homeBanner .homeBanner_left .homeBanner_left_Box {
+  border-left: 0.01rem solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+  padding-bottom: 0.4rem;
+}
+.homeBanner .homeBanner_left p {
+  color: var(--f);
+  padding-left: 0.2rem;
+  line-height: 1.4;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  transform: translateX(-0.01rem);
+  transition: all var(--ease) 0.3s;
+}
+.homeBanner .homeBanner_left p::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 0.01rem;
+  height: 100%;
+  background-color: var(--f);
+  opacity: 0;
+  transition: all var(--ease) 0.3s;
+}
+.homeBanner .homeBanner_left p:hover {
+  opacity: 1;
+}
+.homeBanner .homeBanner_left p.title::before, .homeBanner .homeBanner_left p:hover::before {
+  opacity: 1;
+}
 .homeBanner .swiper-slide {
   display: grid;
 }
@@ -7659,6 +8110,10 @@ footer .footer_menu .search .formBtn img {
   .homeBanner .swiper-slide .index_title p {
     font-size: 0.32rem;
   }
+}
+.homeBanner .index_banner {
+  width: 100%;
+  height: 100%;
 }
 .homeBanner .index_banner_arr {
   height: 1.15rem;
@@ -7828,6 +8283,9 @@ footer .footer_menu .search .formBtn img {
   font-family: "Oswald";
   color: var(--0);
 }
+.i2 .ab_bottom ul li p i {
+  font-style: normal;
+}
 @media screen and (max-width: 1024px) {
   .i2 .ab_bottom ul li p {
     font-size: 0.52rem;
@@ -7912,6 +8370,7 @@ footer .footer_menu .search .formBtn img {
 }
 .i2 .ab_bottom_three ul li p {
   font-size: 0.24rem;
+  font-family: "Poppins", "PingFang SC", "Microsoft YaHei", "Microsoft YaHei UI", "SimSun", "SimHei", "Arial";
 }
 @media screen and (max-width: 768px) {
   .i2 .ab_bottom_three ul li p {
@@ -8080,6 +8539,7 @@ footer .footer_menu .search .formBtn img {
 .i4 .c_h3 a {
   color: var(--0);
   transition: all var(--ease) 0.3s;
+  gap: 0.08rem;
 }
 .i4 .c_h3 a:hover {
   color: var(--bc);
@@ -8204,6 +8664,7 @@ footer .footer_menu .search .formBtn img {
 .i5 .c_h3 a {
   color: var(--0);
   transition: all var(--ease) 0.3s;
+  gap: 0.08rem;
 }
 .i5 .c_h3 a:hover {
   color: var(--bc);
@@ -8251,7 +8712,13 @@ footer .footer_menu .search .formBtn img {
   justify-content: space-between;
   align-items: center;
   display: grid;
-  grid-template-columns: 1.5rem 2rem 1fr 0.2rem;
+  grid-template-columns: 1.5rem 2rem 1fr 4rem 0.2rem;
+}
+@media screen and (max-width: 1024px) {
+  .i5 .news_item .news_box {
+    grid-template-columns: 1rem 1.2rem 0.8fr 2rem 0.2rem;
+    gap: 0.2rem;
+  }
 }
 @media screen and (max-width: 768px) {
   .i5 .news_item .news_box {
@@ -8305,39 +8772,55 @@ footer .footer_menu .search .formBtn img {
   width: 0.15rem;
 }
 .i5 .news_item .news_img {
-  position: fixed;
-  left: 0;
-  top: 0;
   pointer-events: none;
+  position: relative;
+  height: 100%;
+  padding-top: 0.2rem;
 }
 @media screen and (max-width: 768px) {
   .i5 .news_item .news_img {
     position: static;
     pointer-events: auto;
     width: 100%;
+    padding: 0;
   }
 }
 .i5 .news_item .news_img .news_img_box {
-  transform: scale(0);
-  opacity: 0;
   transition: all var(--ease) 0.6s;
+  position: absolute;
+  height: 0;
+  max-width: 3.5rem;
+  height: 2.2rem;
+  width: 100%;
+  height: 0;
+}
+.i5 .news_item .news_img .news_img_box img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 @media screen and (max-width: 768px) {
   .i5 .news_item .news_img .news_img_box {
     opacity: 1;
     transform: scale(1);
+    position: static;
+    height: auto;
+    max-width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
   .i5 .news_item:hover .news_img_box {
-    opacity: 1;
+    height: 2.2rem;
   }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .i5 .news_item:hover .news_img_box {
+    height: 1.4rem;
+  }
+}
+@media screen and (min-width: 768px) {
   .i5 .news_item:hover::after {
     opacity: 1;
   }
-}
-.i5 .news_list:hover .news_img_box {
-  transform: scale(1);
 }
 
 .i6 .c_h3 h3 {
@@ -8362,6 +8845,7 @@ footer .footer_menu .search .formBtn img {
   border-radius: 0.08rem;
   position: relative;
   overflow: hidden;
+  height: 3.1rem;
 }
 .i6 .l_column .l_technology_1_img img {
   max-width: 100%;
