--- a/src/scss/element/_btn.scss
+++ b/src/scss/element/_btn.scss
@@ -18,6 +18,7 @@
         height: 0.08rem;
         background-color: var(--ac);
         border-radius: 100%;
+        transition: all var(--ease) 0.3s;
     }
 }
 
@@ -41,5 +42,9 @@
     &:hover {
         background-color: var(--bc);
         border-color: var(--bc);
+
+        &::before {
+            background-color: var(--ac);
+        }
     }
 }
