--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -136,6 +136,7 @@
         height: 4.8rem;
         padding: 0.1rem;
         background: #fff;
+        border: 0rem solid var(--d);
 
         .c_info {
             height: 3rem;
