--- a/src/scss/layout/_member.scss
+++ b/src/scss/layout/_member.scss
@@ -572,7 +572,7 @@
             border-bottom: 0.01rem solid #b1c6e2;
             margin-bottom: 0.25rem;
             padding-bottom: 0.25rem;
-            padding-top: 0.7rem;
+            padding-top: 0.6rem;
         }
 
         .c_contact_way {
@@ -1089,5 +1089,96 @@
                 flex-wrap: wrap;
             }
         }
+    }
+}
+
+.set_up_fanc {
+    position: fixed;
+    top: 0rem;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.4rem 0.15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 12;
+    background: rgba(247, 247, 247, 0.9);
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all var(--ease) 0.3s;
+
+    .set_up_fanc_box {
+        background-color: var(--f);
+        padding: 0.4rem;
+        border-radius: 0.08rem;
+        max-width: 5.2rem;
+        width: 100%;
+        position: relative;
+    }
+
+    .set_up_fanc_box_top {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .set_up_fanc_box_top_i {
+        display: flex;
+        justify-content: center;
+
+        img {
+            width: 1.29rem;
+            height: 1.29rem;
+        }
+    }
+
+    .set_up_fanc_box_top_l {
+        max-width: 2.9rem;
+        width: 100%;
+    }
+
+    .set_up_fanc_box_top_btn {
+        display: flex;
+        gap: 0.2rem;
+        width: 100%;
+
+        a {
+            border: 0.01rem solid var(--bc);
+            font-size: 0.18rem;
+            color: var(--bc);
+            flex: 1;
+            padding: 0 0.15rem;
+            transition: all var(--ease) 0.3s;
+
+            &:last-child {
+                background: var(--bc);
+                color: var(--f);
+
+                &:hover {
+                    background: var(--bc_c);
+                }
+            }
+
+            &::before {
+                display: none;
+            }
+
+            &:hover {
+                background: var(--bc);
+                color: var(--f);
+            }
+        }
+    }
+
+    .set_up_fanc_box_close {
+        position: absolute;
+        right: 0.3rem;
+        top: 0.2rem;
+        z-index: 10;
+        cursor: pointer;
     }
 }
