--- a/src/scss/layout/_solution.scss
+++ b/src/scss/layout/_solution.scss
@@ -137,7 +137,7 @@
     background-color: var(--bl);
 
     .s5_list {
-        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(3.4rem, 1fr));
         position: relative;
 
         .s5_item {
@@ -374,12 +374,12 @@
         transform: translateX(-50%) translateY(0.2rem);
 
         img {
-            width: 0.16rem;
+            width: 0.07rem;
             position: absolute;
             right: 0;
-            height: 0.16rem;
+            height: 0.07rem;
             max-height: fit-content;
-            transform: translateY(-0.08rem);
+            transform: translateY(-0.03rem);
         }
     }
 }
